--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -9,23 +9,23 @@
 </head>
 <body onload="Time()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">IT</a>
+      <a class="navbar-brand">IT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="virus.html">Virus <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ITBasic.html">Computer Structure</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index - Copy (2).html">Virus</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="index - Copy (3).html">About</a>
+              <a class="nav-link " href="Test.html">Test</a>
             </li>
           </ul>
         </div>
