--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -16,16 +16,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">What is IT?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="virus.html">Virus <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="virus.html">Viruses <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="Test.html">Test</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="Sources.html">Sources</a>
             </li>
           </ul>
         </div>
@@ -100,6 +103,7 @@
     </footer>
 
     <div class="scripts">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
