Virus.html finomitas2

--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -36,11 +36,11 @@
       </nav>
     <section>
 
-
-      <p><h5>Computer viruses</h5></p>
+    <div class="padding">
+      <p><h3>Computer viruses</h3></p>
       <p>By the mid-1980s, not many programmers had taken seriously those who claimed that there were programs that replicated themselves, infecting computers into the system, and destroying other systems. Nowadays, all users have heard of viruses, but unfortunately few are aware of the types of viruses, how they are infected, and the methods of protection.
       <br>Computer viruses are, of course, programs that are mostly so small that they can hide in the system without being noticed.</p>
-      <p><b>Viruses can be divided into two parts:</b></p>
+      <p><b><u>Viruses can be divided into two parts:</u></b></p>
       <ul>
         <dl>
           <li><dt>Sleeping time</dt>
@@ -51,7 +51,7 @@
       </ul>
       <p>A computer virus is a program that places its own copies in other executable programs or documents. A virus is just one of many types of malware. This can be misleading to computer users, as the frequency of computer viruses in the narrower sense has now decreased compared to other malicious software such as worms.<br>
       Although computer viruses can be malicious (e.g., by destroying data), certain types of viruses are just annoying. Some viruses take a delayed effect, for example, only after infecting a certain number of host programs. The dominant harmful effect of viruses is their uncontrolled reproduction, which can overload computer resources.</p>
-      <p><b>Common features</b></p>
+      <p><b><u>Common features</u></b></p>
       <p>Infection of host programs and self-replicating behavior is common to all viruses. In addition, they often have the following characteristics:</p>
       <ul>
         <li>Very small size</li>
@@ -102,15 +102,14 @@
       <p>Trojan programs can carry a variety of viruses or spyware that are automatically installed on your computer when you start them. It got its name from the Trojan wall because, like it, it looks different from the outside than what it actually hides. Software that also performs functions that are unknown to the user, usually harmful and / or contrary to its interests, which disguises itself as a useful program and thus persuades the user to launch it.
       Simpler Trojans only seem to be a useful program from the outside, while their more advanced versions are actually able to perform the promised functions in addition to spying - thus reducing the risk of crashing.
       The primary purpose of such viruses is to extract data. They can work in several ways. However, the principle is the same for everyone. They are triggered when a file or other file that appears to be secure is downloaded, that is, when it is opened. This is also why they are called Trojan horse viruses because we bring them into our system ourselves. During their operation, several symptoms can occur. Some Trojans paralyze the entire system and thus extract the data and then store it (this is even better because the data does not go over the network) or forward it to a pre-programmed computer immediately. However, there are times when we see no sign of the activity of the virus, we only realize it when it is too late. Viruses are usually written for industrial espionage, but there are also instances against private users.</p>
-      <p><b>Protection against viruses</b></p>
+      <p><b><u>Protection against viruses</u></b></p>
       <ul>
         <li>Prevention: use only genuine software</li>
         <li>Early detection: monitor for suspicious signals during computer operation (eg, the computer slows down, programs do not work as we used to, etc.)</li>
         <li>Protection: use a virus-monitoring, memory-resident program</li>
         <li>Prepair: an anti-virus and anti-virus program will try to detect and then delete the virus</li>
       </ul>
-      <hr>
-
+      </div>
 
 
 
