--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -21,8 +21,11 @@
             <li class="nav-item">
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="virus.html">Viruses <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="virus.html">Viruses  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="Test.html">Test</a>
