--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -24,6 +24,9 @@
             <li class="nav-item">
               <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="BIOS.html">BIOS</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="virus.html">Viruses  <span class="sr-only">(current)</span></a>
             </li>
