--- a/2020_10_09/virus.html
+++ b/2020_10_09/virus.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link " href="BIOS.html">BIOS</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="OS.html">Operating System</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="virus.html">Viruses  <span class="sr-only">(current)</span></a>
             </li>
